Update Java13FeaturesDemo.java